<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAFAFF"
    tools:layout_editor_absoluteY="81dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/settingsToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        android:background="@color/theme1_colorPrimary"
        android:theme="@style/CustomToolbarStyle"
        app:layout_scrollFlags="scroll|enterAlways"
        />

    <TextView
        android:id="@+id/changePasswordText"
        android:layout_width="163dp"
        android:layout_height="24dp"
        android:layout_alignStart="@+id/passwordSetting"
        android:layout_below="@+id/passwordSetting"
        android:text="@string/password_text"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/questionTimeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Questionnaire Time"
        android:textSize="20dp"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/changePasswordText"
        android:layout_alignStart="@+id/passwordSetting"/>

    <Button
        android:id="@+id/changeTimeBtn"
        android:layout_width="116dp"
        android:layout_height="27dp"
        android:layout_alignEnd="@+id/nameChangeBtn"
        android:layout_alignTop="@+id/questionTimeTV"
        android:background="@drawable/loginbtn_rounded_rectangle"
        android:onClick="changeTimeBtnOnClick"
        android:text="change time"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/questionTimeText"
        android:layout_width="186dp"
        android:layout_height="43dp"
        android:layout_alignStart="@+id/passwordSetting"
        android:layout_below="@+id/questionTimeTV"
        android:text="Change when you want Oso to start the questionnaire"
        android:textSize="15dp" />

    <ImageView
        android:id="@+id/changePasswordBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="169dp"
        android:onClick="changePasswordClick"
        android:src="@drawable/ic_create_24px" />

    <TextView
        android:id="@+id/passwordSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/nameText"
        android:layout_below="@id/nameText"
        android:text="@string/password_preferences"
        android:layout_marginTop="25dp"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/nameTV"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_alignStart="@+id/changePasswordText"
        android:layout_below="@id/settingsToolbar"
        android:layout_marginTop="20dp"
        android:text="Nickname"
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/nameChangeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/nameTV"
        android:layout_marginEnd="30dp"
        android:inputType="text"
        android:src="@drawable/ic_create_24px"
        android:onClick="changeNameOnClick"
        android:hint="Your Name"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="243dp"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="101dp"
        android:text="@string/name_text"
        android:textSize="15dp" />

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="116dp"
        android:layout_height="27dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="95dp"
        android:background="@drawable/loginbtn_rounded_rectangle"
        android:onClick="logoutBtnOnClick"
        android:text="@string/logoutBtn"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/preferences"
        android:textColor="@color/white"
        android:textSize="30dp" />

</RelativeLayout>
